EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==07/06/2011==
Trevius: Fix for EVENT_ITEM_CLICK_CAST bugging Titanium clients.

==07/05/2011==
Trevius: Fix for EVENT_ITEM_CLICK_CAST for SoF+ clients.
Trevius: (Akkadius) Added new rule Console:SessionTimeOut for adjusting console session timeout.

Optional SQL: utils/sql/svn/1960_optional_console_timeout_rule.sql

==07/02/2011==
JJ: Split wander type 4 to allow depop with/without spawn timer. Type 4 is with, type 6 is without.

==06/26/2011==
JJ: Added functions to count all corpses, get corpse ids, and allow checking of items on player corpses

==06/25/2011==
JJ: (Leere) Fix for bards in reagent code

==06/24/2011==
KLS: Dest zone would buffer overflow if it was >= 16 characters, fixed.
KLS: Comment clean up + added EntityList::FindDoor($doorid) to perlXS
KLS: Fixed the PerlXS export for GetDoorByID and GetDoorByDBID
Sorvani: Added door object perl functions GetKeyItem(), SetKeyItem([value]), GetNoKeyring(), SetNoKeyring([value]). Example Usage: my$doorobj = $entity_list->FindDoor(6); $doorbj->SetKeyItem(10615); $doorbj->SetNoKeyring(1);
JJ: (Akkadius) Exported some task functions to perl.

==06/23/2011==
JJ: (Sorvani) Stop forcing client to tutorial when button not selected.

==06/22/2011==
Trevius: Added new Perl Mob quest object RemoveNimbusEffect(effectid) for removing permanent nimbus particle effects.
JJ: EVENT_CLICKDOOR now passes the zone version to perl.

==06/20/2011==
JJ: Added message to client when using #instance destroy command.
JJ: Altered doors index to include version to help bring door ids below 256 in zones with multiple versions. Required SQL provided.

Required SQL: utils/sql/svn/1946_doors.sql

==06/19/2011==
JJ: (Leere) Fixed reagent consumption oddities

==06/18/2011==
JJ: Depop with spawntimer reset option now works properly. Default use is changed to false.
KLS: Added some minor stuff